Changing serialization so that it supports 2 different ways of specifying field ordering (low bit-high bit and low bit-count). .NET's current default ordering is apparently the same as the class ordering, but it is *not* guaranteed anywhere.

--- a/BitPackerTools/BitPackerTools.csproj
+++ b/BitPackerTools/BitPackerTools.csproj
@@ -66,6 +66,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Serialization\IPackedBitSerializable.cs" />
     <Compile Include="Serialization\PackedBitExcludeAttribute.cs" />
+    <Compile Include="Serialization\PackedBitOrderAttribute.cs" />
+    <Compile Include="Serialization\PackedBitRangeAttribute.cs" />
     <Compile Include="Serialization\PackedBitSerializationException.cs" />
     <Compile Include="Serialization\PackedBitSerializer.cs" />
     <Compile Include="Serialization\PackedBitSizeAttribute.cs" />
