--- a/Test/Test.csproj
+++ b/Test/Test.csproj
@@ -51,6 +51,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="AssertionException.cs" />
     <Compile Include="Assert.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Test\PackedBitReader.cs" />
