--- a/BitPackerTools/BitPackerTools.csproj
+++ b/BitPackerTools/BitPackerTools.csproj
@@ -58,6 +58,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BitCountException.cs" />
+    <Compile Include="Constants.cs" />
     <Compile Include="Extensions.cs" />
     <Compile Include="InsufficientBitsException.cs" />
     <Compile Include="PackedBitMasks.cs" />
@@ -65,7 +66,6 @@
     <Compile Include="PackedBitWriter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Serialization\IPackedBitSerializable.cs" />
-    <Compile Include="Serialization\PackedBitExcludeAttribute.cs" />
     <Compile Include="Serialization\PackedBitOrderAttribute.cs" />
     <Compile Include="Serialization\PackedBitRangeAttribute.cs" />
     <Compile Include="Serialization\PackedBitSerializationException.cs" />
