--- a/Test/Test.csproj
+++ b/Test/Test.csproj
@@ -37,6 +37,8 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.Management" />
+    <Reference Include="System.XML" />
   </ItemGroup>
   <Choose>
     <When Condition="('$(VisualStudioVersion)' == '10.0' or '$(VisualStudioVersion)' == '') and '$(TargetFrameworkVersion)' == 'v3.5'">
@@ -56,33 +58,55 @@
     <Compile Include="Framework\FileAndDirectoryAssertions.cs" />
     <Compile Include="Framework\FloatingPointAssertions.cs" />
     <Compile Include="Framework\LogicalComparisonAssertions.cs" />
-    <Compile Include="Framework\EqualityComparerStateful.cs" />
-    <Compile Include="Framework\EqualityComparerStateless.cs" />
-    <Compile Include="Framework\AssertionException.cs" />
+    <Compile Include="Framework\Util\EqualityComparerStateful.cs" />
+    <Compile Include="Framework\Util\ProcessInputHandleResult.cs" />
+    <Compile Include="Framework\Util\ProcessInputRequestDelegate.cs" />
+    <Compile Include="Framework\Util\IProcessSpawner.cs" />
+    <Compile Include="Framework\Util\ProcessSpawnerWithCombinedAndSplitErrAndOut.cs" />
+    <Compile Include="Framework\Util\ProcessSpawnerWithCombinedErrAndOut.cs" />
+    <Compile Include="Framework\Util\WindowsCommandLineArgumentEscaper.cs" />
+    <Compile Include="Framework\Util\ProcessResult.cs" />
+    <Compile Include="Framework\Util\ICommandLineArgumentEscaper.cs" />
+    <Compile Include="Framework\Util\ProcessSpawnerWithSplitErrAndOut.cs" />
+    <Compile Include="Framework\Util\EqualityComparerStateless.cs" />
+    <Compile Include="Framework\Util\AssertionException.cs" />
     <Compile Include="Framework\Assert.cs" />
+    <Compile Include="Framework\ReflectionAssertions.cs" />
     <Compile Include="Framework\StringAssertions.cs" />
-    <Compile Include="Framework\TypeAndInstanceAssertions.cs" />
+    <Compile Include="Framework\ObjectAssertions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tests\Extensions.cs" />
+    <Compile Include="Tests\Framework\AssertTest.cs" />
+    <Compile Include="Tests\Framework\FileAndDirectoryAssertionsTest.cs" />
+    <Compile Include="Tests\Framework\FloatingPointAssertionsTest.cs" />
+    <Compile Include="Tests\Framework\ReflectionAssertions.cs" />
+    <Compile Include="Tests\Framework\ObjectAssertionsTest.cs" />
+    <Compile Include="Tests\Framework\LogicalComparisonAssertionsTest.cs" />
+    <Compile Include="Tests\Framework\Util\ProcessSpawnerWithCombinedAndSplitErrAndOutTest.cs" />
+    <Compile Include="Tests\Framework\Util\ProcessSpawnerWithCombinedErrAndOutTest.cs" />
+    <Compile Include="Tests\Framework\Util\TestApplications.cs" />
+    <Compile Include="Tests\Framework\Util\ProcessSpawnerWithSplitErrAndOutTest.cs" />
+    <Compile Include="Tests\Framework\StringAssertionsTest.cs" />
+    <Compile Include="Tests\Framework\CollectionAssertionsTest.cs" />
+    <Compile Include="Tests\Framework\BasicAssertionsTest.cs" />
     <Compile Include="Tests\PackedBitReader.cs" />
     <Compile Include="Tests\PackedBitWriter.cs" />
     <Compile Include="Tests\Serialization\BitOrder.cs" />
     <Compile Include="Tests\Serialization\BitRange.cs" />
     <Compile Include="Tests\Serialization\BitSize.cs" />
-    <Compile Include="Tests\Test Framework\AssertTest.cs" />
-    <Compile Include="Tests\Test Framework\FileAndDirectoryAssertionsTest.cs" />
-    <Compile Include="Tests\Test Framework\FloatingPointAssertionsTest.cs" />
-    <Compile Include="Tests\Test Framework\TypeAndInstanceAssertionsTest.cs" />
-    <Compile Include="Tests\Test Framework\LogicalComparisonAssertionsTest.cs" />
-    <Compile Include="Tests\Test Framework\StringAssertionsTest.cs" />
-    <Compile Include="Tests\Test Framework\CollectionAssertionsTest.cs" />
-    <Compile Include="Tests\Test Framework\BasicAssertionsTest.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Tests\Test Framework\diffcontent.bin" />
-    <None Include="Tests\Test Framework\difflength.bin" />
-    <None Include="Tests\Test Framework\eq1.bin" />
-    <None Include="Tests\Test Framework\eq2.bin" />
+    <None Include="Tests\Framework\_diffcontent.bin" />
+    <None Include="Tests\Framework\_difflength.bin" />
+    <None Include="Tests\Framework\_eq1.bin" />
+    <None Include="Tests\Framework\_eq2.bin" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Tests\Framework\Util\_PlusTwoNumber.exe" />
+    <Content Include="Tests\Framework\Util\_NakedInput.exe" />
+    <Content Include="Tests\Framework\Util\_BlankLinesInterspersed.exe" />
+    <Content Include="Tests\Framework\Util\_NoOutput.exe" />
+    <Content Include="Tests\Framework\Util\_SimpleInterspersed.exe" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\BitPackerTools\BitPackerTools.csproj">
