Fixing up .gitignore to support new .vs directory Changing serialization validation so that it's done up front on object construction instead of when you go to de/serialize Changing the rejection code for property types; before it only explicitly rejected double and string during validation and then complained with PackedBitSerializationException otherwise - now it rejects anything that isn't whitelisted Removing PackedBitSerializationException Adding error to PackedBitReader where a stream of 0 bytes in length is now invalid Adding CodePath utility to encode the assumption of whether a code path is unreachable Adding constructor tests for PackedBitSerializer and PackedBitReader Bumping version

--- a/BitPackerTools/BitPackerTools.csproj
+++ b/BitPackerTools/BitPackerTools.csproj
@@ -58,6 +58,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BitCountException.cs" />
+    <Compile Include="CodePath.cs" />
     <Compile Include="Constants.cs" />
     <Compile Include="Extensions.cs" />
     <Compile Include="InsufficientBitsException.cs" />
@@ -68,7 +69,6 @@
     <Compile Include="Serialization\IPackedBitSerializable.cs" />
     <Compile Include="Serialization\PackedBitOrderAttribute.cs" />
     <Compile Include="Serialization\PackedBitRangeAttribute.cs" />
-    <Compile Include="Serialization\PackedBitSerializationException.cs" />
     <Compile Include="Serialization\PackedBitSerializer.cs" />
     <Compile Include="Serialization\PackedBitSizeAttribute.cs" />
   </ItemGroup>
