--- a/Test/Test.csproj
+++ b/Test/Test.csproj
@@ -91,6 +91,7 @@
     <Compile Include="Tests\Framework\BasicAssertionsTest.cs" />
     <Compile Include="Tests\PackedBitReader.cs" />
     <Compile Include="Tests\PackedBitWriter.cs" />
+    <Compile Include="Tests\Serialization\PackedBitSerializer.cs" />
     <Compile Include="Tests\Serialization\BitOrder.cs" />
     <Compile Include="Tests\Serialization\BitRange.cs" />
     <Compile Include="Tests\Serialization\BitSize.cs" />
